@@ -229,7 +229,7 @@ sub _create_atoms
         'simple_decode_map' =>
         {
             'pos'  => 'pos',
-            'comp' => 'comp',
+            'comp' => 'cmp',
             'sup'  => 'sup'
         }
     );
